--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -685,7 +685,7 @@ progress {
 
 .initialism {
   font-size: 0.875em;
-  text-transform: uppercase;
+ /*  text-transform: uppercase; */
 }
 
 .blockquote {
@@ -8473,15 +8473,15 @@ textarea.form-control-lg {
 }
 
 .text-lowercase {
-  text-transform: lowercase !important;
+ /*  text-transform: lowercase !important; */
 }
 
 .text-uppercase {
-  text-transform: uppercase !important;
+ /*  text-transform: uppercase !important; */
 }
 
 .text-capitalize {
-  text-transform: capitalize !important;
+ /*  text-transform: capitalize !important; */
 }
 
 .text-wrap {
