--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -42,10 +42,10 @@
 /************************************/	
 
 :root{
-	--primary-color			: #153C33;
+	--primary-color			: #545791;
 	--secondary-color		: #E6EFED;
 	--text-color			: #153C33B3;
-	--accent-color			: #619E90;
+	--accent-color			: #4c6583;
 	--white-color			: #FFFFFF;
 	--divider-color			: #FFFFFF26;
 	--dark-divider-color	: #153C331A;
