--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -46,8 +46,8 @@
 	--secondary-color		: #E6EFED;
 	--text-color			: #153C33B3;
 	--accent-color			: #4c6583;
-	/* --white-color			: #FFFFFF; */
-	--white-color			: #C3C4C6;
+	 --white-color			: #FFFFFF; 
+	/* --white-color			: #C3C4C6; */
 	--divider-color			: #FFFFFF26;
 	--dark-divider-color	: #153C331A;
 	--error-color			: rgb(230, 87, 87);
@@ -907,7 +907,7 @@ header.main-header .header-sticky.active{
 	bottom: 0;
 	right: 0;
 	left: 0;
-	background-color: var(--primary-color);
+	/* background-color: var(--primary-color); */
 	opacity: 50%;
 	width: 100%;
 	height: 100%;
